add source status, designation, and phone

--- a/public/water-inventory.html
+++ b/public/water-inventory.html
@@ -127,10 +127,18 @@
                 </div>
 
                 <!-- Source of Water -->
-                <div class="col-12">
-                  <label for="modalSourceWater" class="form-label fw-bold small">Source of Water</label>
+                <div class="col-6">
+                  <label for="modalSourceWaterSelect" class="form-label fw-bold small">Source of Water</label>
                   <!-- Select dropdown -->
                   <select class="form-select form-select-lg" id="modalSourceWaterSelect">
+                  </select>
+                </div>
+
+              <!-- Source Status -->
+                <div class="col-6">
+                  <label for="modalSourceStatus" class="form-label fw-bold small">Source Status</label>
+                  <!-- Select dropdown -->
+                  <select class="form-select form-select-lg" id="modalSourceStatus">
                   </select>
                 </div>
 
@@ -143,16 +151,6 @@
                 <div class="col-6">
                   <label for="modalLongitude" class="form-label fw-bold small">Longitude</label>
                   <input type="text" class="form-control form-control-lg" id="modalLongitude" placeholder="Enter longitude">
-                </div>
-
-                <!-- Checkbox -->
-                <div class="col-12">
-                  <div class="form-check mt-2">
-                    <input class="form-check-input" type="checkbox" id="modalIsWaterSource">
-                    <label class="form-check-label" for="modalIsWaterSource">
-                      Is Water Source?
-                    </label>
-                  </div>
                 </div>
 
                 <div class="col-12">
@@ -175,6 +173,16 @@
                 <div class="col-12">
                   <label for="modalRepresentative" class="form-label fw-bold small">Representative</label>
                   <input type="text" class="form-control form-control-lg" id="modalRepresentative" placeholder="Enter representative">
+                </div>
+
+                <div class="col-6">
+                  <label for="modalDesignation" class="form-label fw-bold small">Designation</label>
+                  <input type="text" class="form-control form-control-lg" id="modalDesignation" placeholder="Enter designation">
+                </div>
+
+                <div class="col-6">
+                  <label for="modalPhone" class="form-label fw-bold small">Tel / Phone</label>
+                  <input type="text" class="form-control form-control-lg" id="modalPhone" placeholder="Enter tel / phone number">
                 </div>
 
                 <div class="col-12 d-flex flex-column align-items-center">
@@ -257,9 +265,17 @@
                 </div>
 
                 <!-- Source of Water -->
-                <div class="col-12">
+                <div class="col-6">
                   <label for="editSourceWaterSelect" class="form-label fw-bold small">Source of Water</label>
                   <select class="form-select form-select-lg" id="editSourceWaterSelect">
+                  </select>
+                </div>
+
+              <!-- Source Status -->
+                <div class="col-6">
+                  <label for="editSourceStatus" class="form-label fw-bold small">Source Status</label>
+                  <!-- Select dropdown -->
+                  <select class="form-select form-select-lg" id="editSourceStatus">
                   </select>
                 </div>
 
@@ -272,16 +288,6 @@
                 <div class="col-6">
                   <label for="editLongitude" class="form-label fw-bold small">Longitude</label>
                   <input type="text" class="form-control form-control-lg" id="editLongitude" placeholder="Enter longitude">
-                </div>
-
-                <!-- Checkbox -->
-                <div class="col-12">
-                  <div class="form-check mt-2">
-                    <input class="form-check-input" type="checkbox" id="editIsWaterSource">
-                    <label class="form-check-label" for="editIsWaterSource">
-                      Is Water Source?
-                    </label>
-                  </div>
                 </div>
 
                 <!-- Purpose -->
@@ -303,6 +309,16 @@
                 <div class="col-12">
                   <label for="editRepresentative" class="form-label fw-bold small">Representative</label>
                   <input type="text" class="form-control form-control-lg" id="editRepresentative" placeholder="Enter representative">
+                </div>
+                
+                <div class="col-6">
+                  <label for="editDesignation" class="form-label fw-bold small">Designation</label>
+                  <input type="text" class="form-control form-control-lg" id="editDesignation" placeholder="Enter designation">
+                </div>
+
+                <div class="col-6">
+                  <label for="editPhone" class="form-label fw-bold small">Tel / Phone</label>
+                  <input type="text" class="form-control form-control-lg" id="editPhone" placeholder="Enter tel / phone number">
                 </div>
 
                 <div class="col-12 d-flex flex-column align-items-center">
