--- a/public/water-user.html
+++ b/public/water-user.html
@@ -172,6 +172,23 @@
                   </div>
                 </div>
 
+                <div class="col-6">
+                  <label for="status" class="form-label small">Source Status</label>
+                  <!-- Select dropdown -->
+                  <select class="form-select form-select" id="status">
+                  </select>
+                </div>
+
+                <!-- Is Water Source -->
+                <div class="col-6">
+                  <div class="form-check">
+                    <input class="form-check-input mt-4" type="checkbox" id="isWaterSource">
+                    <label class="form-check-label mt-4" for="isWaterSource">
+                      Is Water Source?
+                    </label>
+                  </div>
+                </div>
+
                 <div class="col-md-6">
                   <label for="latitude" class="form-label">Latitude <span class="text-danger">*</span></label>
                   <div class="input-group">
@@ -221,6 +238,29 @@
                   </div>
                 </div>
 
+                <div class="col-md-6">
+                  <label for="representative" class="form-label">Representative</label>
+                  <div class="input-group">
+                    <span class="input-group-text"><i class="bi bi-people"></i></span>
+                    <input type="text" class="form-control" id="representative" name="representative">
+                  </div>
+                </div>
+
+                <div class="col-md-6">
+                  <label for="designation" class="form-label">Designation</label>
+                  <div class="input-group">
+                    <span class="input-group-text"><i class="bi bi-people"></i></span>
+                    <input type="text" class="form-control" id="designation" name="designation">
+                  </div>
+                </div>
+
+                <div class="col-md-6">
+                  <label for="phone" class="form-label">Phone</label>
+                  <div class="input-group">
+                    <span class="input-group-text"><i class="bi bi-telephone"></i></span>
+                    <input type="text" class="form-control" id="phone" name="phone">
+                  </div>
+                </div>
 
                 <div class="col-md-6">
                   <label for="remarks" class="form-label">Remarks</label>
@@ -229,25 +269,6 @@
                     <textarea class="form-control" id="remarks" rows="2"></textarea>
                   </div>
                 </div>
-
-                <div class="col-md-6">
-                  <label for="representative" class="form-label">Representative <span class="text-danger">*</span></label>
-                  <div class="input-group">
-                    <span class="input-group-text"><i class="bi bi-people"></i></span>
-                    <input type="text" class="form-control" id="representative" name="representative" required>
-                  </div>
-                </div>
-
-                <!-- Is Water Source -->
-                <div class="col-6">
-                  <div class="form-check">
-                    <input class="form-check-input" type="checkbox" id="isWaterSource">
-                    <label class="form-check-label" for="isWaterSource">
-                      Is Water Source?
-                    </label>
-                  </div>
-                </div>
-
               </div>
               </div>
 
@@ -339,6 +360,23 @@
                     </div>
                   </div>
 
+                  <div class="col-6">
+                    <label for="editStatus" class="form-label small">Source Status</label>
+                    <!-- Select dropdown -->
+                    <select class="form-select form-select" id="editStatus">
+                    </select>
+                  </div>
+
+                  <!-- Is Water Source -->
+                  <div class="col-6">
+                    <div class="form-check">
+                      <input class="form-check-input mt-4" type="checkbox" id="editIsWaterSource">
+                      <label class="form-check-label mt-4" for="editIsWaterSource">
+                        Is Water Source?
+                      </label>
+                    </div>
+                  </div>
+
                   <div class="col-md-6">
                     <label for="editLatitude" class="form-label">Latitude <span class="text-danger">*</span></label>
                     <div class="input-group">
@@ -386,18 +424,34 @@
                   </div>
 
                   <div class="col-md-6">
-                    <label for="editRemarks" class="form-label">Remarks</label>
-                    <div class="input-group">
-                      <span class="input-group-text"><i class="bi bi-chat-left-text"></i></span>
-                      <textarea class="form-control" id="editRemarks" rows="2"></textarea>
-                    </div>
-                  </div>
-
-                  <div class="col-md-6">
                     <label for="editRepresentative" class="form-label">Representative <span class="text-danger">*</span></label>
                     <div class="input-group">
                       <span class="input-group-text"><i class="bi bi-people"></i></span>
                       <input type="text" class="form-control" id="editRepresentative" name="editRepresentative" required>
+                    </div>
+                  </div>
+
+                  <div class="col-md-6">
+                    <label for="editDesignation" class="form-label">Designation</label>
+                    <div class="input-group">
+                      <span class="input-group-text"><i class="bi bi-people"></i></span>
+                      <input type="text" class="form-control" id="editDesignation" name="editDesignation">
+                    </div>
+                  </div>
+
+                  <div class="col-md-6">
+                    <label for="editPhone" class="form-label">Phone</label>
+                    <div class="input-group">
+                      <span class="input-group-text"><i class="bi bi-telephone"></i></span>
+                      <input type="text" class="form-control" id="editPhone" name="editPhone">
+                    </div>
+                  </div>
+
+                  <div class="col-md-6">
+                    <label for="editRemarks" class="form-label">Remarks</label>
+                    <div class="input-group">
+                      <span class="input-group-text"><i class="bi bi-chat-left-text"></i></span>
+                      <textarea class="form-control" id="editRemarks" rows="2"></textarea>
                     </div>
                   </div>
                   <div class="col-6">
@@ -407,19 +461,8 @@
                       </label>
                   </div>
 
-                  <!-- Is Water Source -->
-                  <div class="col-6">
-                    <div class="form-check">
-                      <input class="form-check-input" type="checkbox" id="editIsWaterSource">
-                      <label class="form-check-label" for="editIsWaterSource">
-                        Is Water Source?
-                      </label>
-                    </div>
-                  </div>
-
                 </div>
               </div>
-
               <div class="modal-footer">
                 <button type="button" class="btn btn-3d btn-outline-secondary" data-bs-dismiss="modal">Cancel</button>
                 <button type="submit" class="btn btn-3d btn-warning">
