create MEMIS to database module

--- a/public/water-inventory.html
+++ b/public/water-inventory.html
@@ -40,14 +40,14 @@
 
             <!-- Year Conducted -->
             <div class="col-6">
-              <label for="yearConducted" class="form-label">Year Conducted</label>
+              <label for="yearConducted" class="form-label">Year Inspected</label>
               <input type="number" class="form-control" id="yearConducted">
             </div>
 
             
             <!-- Month Conducted -->
             <div class="col-6">
-              <label for="monthConducted" class="form-label">Month Conducted</label>
+              <label for="monthConducted" class="form-label">Month Inspected</label>
               <select class="form-select" id="monthConducted">
               <!-- Options will be populated by JS -->
               </select>
@@ -92,12 +92,12 @@
 
                 <!-- Year Conducted -->
                 <div class="col-6">
-                  <label for="modalYearConducted" class="form-label fw-bold small">Year Conducted</label>
+                  <label for="modalYearConducted" class="form-label fw-bold small">Year Inspected</label>
                   <input type="number" class="form-control form-control-lg" id="modalYearConducted">
                 </div>
 
                 <div class="col-6">
-                  <label for="monthConductedAddModal" class="form-label">Month Conducted</label>
+                  <label for="monthConductedAddModal" class="form-label">Month Inspected</label>
                   <select class="form-select fw-bold form-select-lg" id="monthConductedAddModal">
                   <!-- Options will be populated by JS -->
                   </select>
@@ -230,12 +230,12 @@
                 <input type="hidden" id="editIndex">
                 <!-- Year Conducted -->
                 <div class="col-6">
-                  <label for="editYearConducted" class="form-label fw-bold small">Year Conducted</label>
+                  <label for="editYearConducted" class="form-label fw-bold small">Year Inspected</label>
                   <input type="number" class="form-control form-control-lg" id="editYearConducted">
                 </div>
 
                 <div class="col-6">
-                  <label for="monthConductedEditModal" class="form-label">Month Conducted</label>
+                  <label for="monthConductedEditModal" class="form-label">Month Inspected</label>
                   <select class="form-select fw-bold form-select-lg" id="monthConductedEditModal">
                   <!-- Options will be populated by JS -->
                   </select>
