--- a/public/water-user.html
+++ b/public/water-user.html
@@ -219,7 +219,7 @@
 
                 <div class="row">
                   <div class="col-md-6">
-                    <label for="monthConducted" class="form-label">Month Conducted</label>
+                    <label for="monthConducted" class="form-label">Month Inspected</label>
                     <div class="input-group">
                       <span class="input-group-text"><i class="bi bi-calendar-month"></i></span>
                       <select class="form-select" id="monthConducted">
@@ -229,7 +229,7 @@
                   </div>
 
                   <div class="col-md-6">
-                    <label for="yearConducted" class="form-label">Year Conducted <span class="text-danger">*</span></label>
+                    <label for="yearConducted" class="form-label">Year Inspected <span class="text-danger">*</span></label>
                     <div class="input-group">
                       <span class="input-group-text"><i class="bi bi-calendar3"></i></span>
                       <input type="number" class="form-control" id="yearConducted" required min="1900" max="2099" placeholder="e.g., 2025">
@@ -404,7 +404,7 @@
                   </div>
 
                   <div class="col-md-6">
-                    <label for="editMonthConducted" class="form-label">Month Conducted</label>
+                    <label for="editMonthConducted" class="form-label">Month Inspected</label>
                     <div class="input-group">
                       <span class="input-group-text"><i class="bi bi-calendar-month"></i></span>
                       <select class="form-select" id="editMonthConducted">
@@ -415,7 +415,7 @@
 
                   <!-- Year Conducted -->
                   <div class="col-md-6">
-                    <label for="editYearConducted" class="form-label">Year Conducted <span class="text-danger">*</span></label>
+                    <label for="editYearConducted" class="form-label">Year Inspected <span class="text-danger">*</span></label>
                     <div class="input-group">
                       <span class="input-group-text"><i class="bi bi-calendar3"></i></span>
                       <input type="number" class="form-control" id="editYearConducted" required min="1900" max="2099" placeholder="e.g., 2025">
