add ledger analytics

--- a/public/consumable.html
+++ b/public/consumable.html
@@ -157,6 +157,13 @@
                 <label for="editUnit" class="form-label fw-semibold">Unit of Measurement <span class="text-danger">*</span></label>
                 <input type="text" id="editUnit" class="form-control" placeholder="e.g., pcs, set, box" required />
               </div>
+
+              <div class="form-check">
+                <input class="form-check-input" type="checkbox" value="" id="priorityCheckbox">
+                <label class="form-check-label" for="priorityCheckbox">
+                  Priority?
+                </label>
+              </div>
             </div>
 
             <div class="modal-footer bg-light rounded-bottom-4">
