--- a/public/water-user.html
+++ b/public/water-user.html
@@ -84,6 +84,7 @@
             <th class="align-middle">City</th>
             <th class="align-middle">Latitude</th>
             <th class="align-middle">Longitude</th>
+            <th class="align-middle">Year</th>
             <th class="align-middle">Action</th>
         </thead>
           <tbody id="waterUserTableBody">
