--- a/public/permit.html
+++ b/public/permit.html
@@ -498,7 +498,7 @@
                         <label class="form-label">
                           <i class="bi bi-clipboard-check me-1"></i> Purpose (e.g. Domestic)
                         </label>
-                        <input type="text" class="form-control" id="editPurpose" disabled>
+                        <input type="text" class="form-control" id="editPurpose">
                       </div>
 
                       <!-- Visited Checkbox -->
